# cryptex-oss

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  NOTICE  PROJECT-STATUS.md  README.md  docker-compose.yaml  docker-compose.yml  docker-entrypoint.sh  index.template.html  nginx.conf  package-lock.json  package.json  pyproject.toml
.cache/: emoji-test.txt
.github/workflows/: deploy.yml  docker.yml
app/: .size-limit.json  package-lock.json  package.json  vite.config.ts
app/src/: app.css  app.html  vite-env.d.ts
app/src/routes/: +layout.svelte
app/tests/smoke/: techniques.spec.ts
cryptex_cli/: __init__.py  bridge.py  cli.py
css/: style.css
docs/: 2026-05-06-handoff-redteam-expansion.md  2026-05-07-handoff-auth-hardening.md  CUSTOM-ENDPOINTS.md  DEPLOY-ANALYTICS-AND-ADSENSE.md  DEPLOY-DOKPLOY-SUPABASE.md  DEPLOYMENT.md  SUPABASE-EMAIL-TEMPLATES.md  SUPABASE.md  USAGE.md
docs/superpowers/plans/: 2026-04-19-prompts-overhaul-plan.md  2026-04-20-production-prompts-plan.md  2026-04-21-unified-techniques-gateway-plan.md  (+6 more)
infra/cors-proxy/: README.md  cloudflare-worker.js
js/: app.js
js/core/: toolRegistry.js
js/data/: openrouterModels.js
js/tools/: AntiClassifierTool.js  BijectionTool.js  DecodeTool.js  MutationTool.js  PromptCraftTool.js  SplitterTool.js  TransformTool.js  TranslateTool.js
python_tests/: test_cli_e2e.py
src/transformers/: README.md  index.js
templates/: anticlassifier.html  bijection.html  decoder.html  promptcraft.html  splitter.html  tokenade.html  transforms.html
tests/: test_universal.js
(+272 files in other folders)
