[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "cryptex-cli"
version = "0.1.0"
description = "Agent-based CLI for the Cryptex transform catalog"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
cryptex = "cryptex_cli.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.hatch.build.targets.wheel]
packages = ["cryptex_cli"]

[tool.pytest.ini_options]
testpaths = ["python_tests"]
addopts = "-q"

